# system-sales-python

./: .env_example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 142f8afd69d7_init.py
db/: populate.sql
db/migrations/: drop.sql  up.sql
docs/: create_db.sql  db.diagram
docs/csv/: product.csv
midas_sales/: config.py  database.py  main.py  security.py  tasks.py
midas_sales/admin/models/: plan_model.py
midas_sales/admin/routes/: tenant_router.py
midas_sales/analytics/controller/: activity_controller.py
midas_sales/analytics/models/: activity_model.py  lead_model.py
midas_sales/analytics/schema/: lead_schema.py
midas_sales/base/controllers/: base_controller.py
midas_sales/core/controllers/: calendar_controller.py  company_controller.py  customization_controller.py  dashboard_controller.py  form_payment_controller.py  order_controller.py  payment_controller.py  product_controller.py  seller_controller.py  service_controller.py  stock_history_controller.py  tenant_controller.py  user_controller.py
midas_sales/core/models/: address_model.py  calendar_model.py  company_model.py  customization_model.py  file_model.py  form_payment_model.py  order_model.py  payment_model.py  product_model.py  seller_model.py  service_model.py  smtp_model.py  stock_history_model.py  tenant_model.py  user_model.py
midas_sales/core/routes/: calendar_router.py  company_router.py  customization_router.py  dashboard_router.py  (+10 more)
midas_sales/templates/: sales-exemplo.json
(+26 files in other folders)
