[tool.poetry]
name = "midas-sales"
version = "0.1.1a0"
description = ""
authors = ["Ivan Noleto <ivannoleto@hotmail.com>"]
readme = "README.md"
packages = [{include = "midas_sales"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
greenlet = "^2.0.2"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.4.2"}
stripe = "^6.6.0"
boto3 = "^1.28.57"
yagmail = "^0.15.293"
celery = {extras = ["redis"], version = "^5.3.4"}
pandas = "^2.1.0"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
